# hello-world-arduino

./: AvrSupervising.cpp  SingleWireTransfering.h  SystemDebugging.cpp  atmega32u4.ld  build.sh  check.sh  hello-world-arduino.ino  meson.build  setup.sh
src/: AvrSupervising.cpp  AvrSupervising.h  LibcCustom.cpp  LibcCustom.h  main.cpp
tools-dev/cross/: meson-cross-avr.txt
